--- a/R/bc-sd61-popn/sd61_kids.Rmd
+++ b/R/bc-sd61-popn/sd61_kids.Rmd
@@ -5,12 +5,13 @@ output:
 ---
 
 <!-- 
-This file is licensed with the Creative Commons Attribution 4.0 International License. 
+This file is licensed with the Creative Commons Attribution 4.0 International License.
 -->
 
 
-```{r setup, include=FALSE}
-## get packages
+```{r setup, include = FALSE}
+## get R packages
+library(glue) #glue strings
 library(cansim) #get StatsCan data
 library(dplyr) #data munging
 library(ggplot2) #plotting
@@ -18,42 +19,51 @@ library(scales) #number commas
 library(here) #easier paths
 library(curl) #pull data from web
 library(readxl) #import xls
-library(tidyr) #reshaor data frame
+library(tidyr) #reshape data frame
 library(readr) #import csv
 library(sf) #mapping
 library(bcmaps) #get bc maps
-library(gganimate) #animate plots (package availale from GitHub, https://github.com/thomasp85/gganimate)
-library(patchwork) #side by side plots (package availale from GitHub, https://github.com/thomasp85/patchwork)
+library(gganimate) #animate plots (package available from GitHub, https://github.com/thomasp85/gganimate)
+library(patchwork) #side by side plots (package available from GitHub, https://github.com/thomasp85/patchwork)
 
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE,
                       cache = TRUE)
+
+path <- here("R", "bc-sd61-popn", "data")
+
 theme_plots <- theme(axis.text = element_text(size = 8),
                      plot.title = element_text(size = 12),
                      plot.subtitle = element_text(size = 10),
                      axis.title = element_blank())
-#temp code
-if (!exists("bc_popn")) load(here("R/bc-sd61-popn/data/temp.RData"))
 
+#temp code
+if (!exists("bc_popn")) load(glue(path,"/temp.RData"))
 ```
 
 
 ## The Kids Are Coming, Let's Get Ready
 
-We are in the campaign period for the British Columbia [2018 General Local Elections](https://elections.bc.ca/political-participants/local-elections-campaign-financing/2018-general-local-elections/). I have had a few conversations with candidates running for various posts, mostly for Councillor or School Board Trustee, over the past couple of weeks. I have enjoyed talking with candidates about what issues motivated them to campaign to step into such important roles&mdash;the housing crisis, responsible developement, climate change mitigation & adaptation. OK, ok, nobody mentioned the climate change part, but [I wish they had](https://www.ipcc.ch/news_and_events/pr_181008_P48_spm.shtml). 
+We are in the campaign period for the British Columbia [2018 General Local Elections](https://elections.bc.ca/political-participants/local-elections-campaign-financing/2018-general-local-elections/). I live in the Township of Esquimalt `r emo::ji("cityscape")`&mdash;an amazing community. However, there is always room to improve, even on amazing. I have enjoyed talking with our local government candidates, in particular about what issues motivated them to campaign to step into such important roles&mdash;the housing crisis, responsible development, community building. In turn, I have had a fair bit to say about issues on my mind, such as climate change ([this `r emo::ji("scream")`](https://www.ipcc.ch/news_and_events/pr_181008_P48_spm.shtml)), reducing speed limits in neighbourhood areas `r emo::ji("car")`, more and safer bike paths for family cycling `r emo::ji("bike")`, and, _schools_. Specifically, space in our only catchment elementary school&mdash;[L'Ecole Macaulay Elementary](https://macaulay.sd61.bc.ca/).  
 
-I have lived in the Township of Esquimalt for the past 2+ years `r emo::ji("house")`. It is an amazing community&mdash;but there is always room to improve, even on amazing. I have had a fair bit to say to candidates about issues on my mind, such as reducing speed limits in neighbourhood areas `r emo::ji("car")`, more and safer bike paths for family cycling `r emo::ji("bike")`, providing low income housing `r emo::ji("house")`, and, _schools_. Specifically, space in our only catchment elementary school&mdash;L'Ecole Macaulay Elementary.  
+Esquimalt used to have 2 catchment elementary schools, Lampson Street & Macaulay ([Ecole Victor-Brodeur](https://en.wikipedia.org/wiki/%C3%89cole_Victor-Brodeur) is also in Esquimalt, a school that serves the francophone community). Lampson, a school building with [an impressive history in the region](https://victoriadailyphoto.blogspot.com/2013/05/lampson-street-school.html), was closed as a catchment elementary school in 2007 due to declining enrolment. 
 
-Esquimalt used to have 2 catchment elementary schools, Lampson Street & Macaulay (L'Ecole Victor Brodeur is also in Esquimalt, with enrolment reserved for francophone families). Lampson, a school with [an impressive history in the region](https://victoriadailyphoto.blogspot.com/2013/05/lampson-street-school.html), was closed as a catchment elementary school in 2007 due to declining enrolment. However, things have and are changing&mdash;and changing _fast_. 
+However, things have and are changing&mdash;and pretty _fast_. 
 
-Due to the recent, legal change to [revert class size & composition back to 2002 levels](https://bctf.ca/IssuesInEducation.aspx?id=5530), as well as a growing population&mdash;Macaulay has added one or more new classes in each of the 3 years I have had kids in the school, as have many elementary schools throughout the Capital Regional District. Macaulay has over 470 kids enrolled this year, so I have been talking `r emo::ji("speaking_head")` to candidates about how Macaulay is _full_&mdash;and I think we need to fast track a plan for the kids that are still to come.
+Due to the recent, legal change to [revert class size & composition back to 2002 levels](https://bctf.ca/IssuesInEducation.aspx?id=5530), as well as a growing population&mdash;Macaulay has added one or more new classes in each of the 3 years I have had kids in the school, as have many elementary schools throughout the Capital Regional District. Macaulay has over 470 kids enrolled this year, so I have been talking `r emo::ji("speaking_head")` to candidates about how Macaulay is pretty _full_&mdash;and I think we need a plan for the kids that are still to come.
 
-I thought it would be interesting to support all my talk `r emo::ji("speaking_head")` with some _data_. Also, I am always keen to work on my [R](https://www.r-project.org/) skills `r emo::ji("woman_technologist")`. So here it goes.
+I thought it would be interesting to support this discussion with some _data_. Also, I am always keen to work on my [R](https://www.r-project.org/) skills `r emo::ji("woman_technologist")`. So here it goes.
+
+<br/> 
 
 #### Population Change in Victoria Census Metropolitan Area (2001-2017)
 
-Let's start by pulling some population estimate data from Statistics Canada&mdash;I found data for each Census Metropolitan Area by age group. Perfect. I had to Google the Victoria Census Metropolitan Area&mdash;turns out it mostly includes [all of the Capital Regional District without the Gulf Islands](https://www12.statcan.gc.ca/census-recensement/2011/as-sa/fogs-spg/Facts-cma-eng.cfm?LANG=Eng&GK=CMA&GC=935).
+Let's start by pulling some population estimate data from Statistics Canada&mdash;I found data for each Census Metropolitan Area by age group. Perfect. I had to Google to learn about what the Victoria Census Metropolitan Area (CMA) actually includes (`r emo::ji("woman_facepalming")`), turns out it includes [all of the Capital Regional District minus the Gulf Islands](https://www12.statcan.gc.ca/census-recensement/2011/as-sa/fogs-spg/Facts-cma-eng.cfm?LANG=Eng&GK=CMA&GC=935). Let's have a look `r emo::ji("eyes")`:
 
-```{r yyj, fig.width = 10, fig.height = 7}
+<details><summary>Click to see the R code for the Victoria CMA plots</summary>
+
+```{r cma}
+## Data: Victoria Census Metropolitan Census Area (British Columbia) Population
+## Estimates [Table: 17-10-0078-01 (formerly CANSIM  051-0056) from Statistics Canada
 
 #get Statistics Canada data using cansim package
 # bc_popn <- get_cansim(1710007801) %>% 
@@ -61,7 +71,7 @@ Let's start by pulling some population estimate data from Statistics Canada&mdas
 #          Sex == "Both sexes") %>% 
 #   select(year = REF_DATE, age_group = `Age group`, population_estimate = VALUE) 
 
-#make plot of yyj population estimates
+#make plot of Victoria CMA population estimates
 yyj_plot <- bc_popn %>% 
   filter(age_group == "All ages") %>% 
   ggplot(aes(x = year, y = population_estimate, group = 1)) + 
@@ -81,7 +91,7 @@ yyj_plot <- bc_popn %>%
 #kid age groups
 kid_ages <- c("0 to 4 years", "5 to 9 years", "10 to 14 years", "15 to 19 years")
 
-#make plot of yyj kid population estimates
+#make plot of kid Victoria CMA population estimates
 yyj_kids_plot <- bc_popn %>% 
   filter(age_group %in% kid_ages) %>% 
   group_by(year) %>% 
@@ -99,31 +109,47 @@ yyj_kids_plot <- bc_popn %>%
        caption = "Data sourced from Statistics Canada") +
   theme_minimal() +
   theme_plots
+```
 
-#plot the plots
+```{r cma-plots, eval = FALSE, fig.width = 12, fig.height = 7}
+#plot the Victoria CMA plots
 yyj_plot + yyj_kids_plot
 ```
 
-Huh. So as we here all the time, the data tells us that the population in Greater Victoria (or the CMA) has been steadily increasing since 2001. But _not_ due to more kids&mdash;the population of 0 to 19 year olds steadily declined from 2001 until 2013-2014. Explains the decline in enrolment$mdash;and decisions to close schools. But 2014 marks a clear change, with kid numbers starting to come back up. But what about in the Township of Esquimalt?
+</details>
+
+<br/>
+
+```{r cma-actual-plots, echo = FALSE, fig.width = 12, fig.height = 7}
+#plot the Victoria CMA plots
+yyj_plot + yyj_kids_plot
+```
+
+The Statistics Canada data confirms what we hear all the time, the population in the Victoria CMA has been steadily increasing since 2001. But _not_ due to more kids&mdash;the population of 0 to 19 year olds steadily declined from 2001 until 2013-2014. This explains the decline in enrolment&mdash;and School District decisions to close schools at that time. However, 2014 marks a clear change&mdash;kid numbers are increasing. But what about in the Township of Esquimalt?
+
+<br/>
 
 #### Population Change in the Township of Esquimalt (2001-2017)
 
-I found some population data for Municipalities from [BCStats](https://www2.gov.bc.ca/gov/content?id=36D1A7A4BEE248598281824C13CB65B6), but unfortunately not by age group. This step took some wrangling, as the data are provided in 2 separate files with different structures, but I get there eventually.
+I found some population data for Municipalities from [BCStats](https://www2.gov.bc.ca/gov/content?id=36D1A7A4BEE248598281824C13CB65B6), but unfortunately not by age group `r emo::ji("disappointed")`.
 
-```{r municipalities,  fig.width = 10, fig.height = 7}
+<details><summary>Click to see the R code for the Esquimalt plot & map</summary>
+
+```{r mun}
+## Data: Esquimalt District Municipality population estimates from
+## BCStats Population Estimates webpage
 
 #municipalities I want
 crd <- c("Central Saanich", "Colwood", "Esquimalt", "Highlands",
          "Langford", "Metchosin", "North Saanich", "Oak Bay", "Saanich",
          "Sidney", "Sooke", "Victoria", "View Royal")
 
-# get the 2001-2011 CRD population estimate data file 
+#get the 2001-2011 CRD population estimate data file 
 bcstats_mun_2001_2011 <- 
   "http://www.bcstats.gov.bc.ca/Files/0379a32f-cec8-438d-83e0-6724b2a2a272/BCDevelopmentRegionRegionalDistrictandMuncipalPopulationEstimates2001-2011.xls"
 
 get_mun_2001_2011 <- curl_download(bcstats_mun_2001_2011,
-                                   destfile = here("R", "bc-sd61-popn", "data",
-                                                   "/bcstats_mun_2001_2011.xls"))
+                                   destfile = glue(path, "/bcstats_mun_2001_2011.xls"))
 
 crd_2001_2011 <- read_xls(get_mun_2001_2011, skip = 3) %>%  
   filter(Name %in% crd) %>% 
@@ -134,8 +160,7 @@ bcstats_mun_2011_2017 <-
   "http://www.bcstats.gov.bc.ca/Files/285cd56c-9be1-4c5e-a153-3deeffa2ac94/BCDevelopmentRegionRegionalDistrictandMuncipalPopulationEstimates2011-2015.xls"
 
 get_mun_2011_2017 <- curl_download(bcstats_mun_2011_2017,
-                                   destfile = here("R", "bc-sd61-popn", "data",
-                                                   "/bcstats_mun_2011_2017.xls"))
+                                   destfile = glue(path, "/bcstats_mun_2011_2017.xls"))
 
 crd_2001_2017 <- read_xls(get_mun_2011_2017, range = ("A3:J48")) %>% 
   filter(Name %in% crd) %>% 
@@ -186,24 +211,123 @@ crd_change_spatial <- municipalities() %>%
   scale_fill_gradient(name = "Percent\nChange", low = "#bcbddc", high = "#132B43") +
   theme_minimal() +
   theme_plots
+```
 
-#plot the plots
+```{r mun-plots, eval = FALSE,  fig.width = 10, fig.height = 7}
+#plot the Esquimalt plots
 esquimalt_plot + crd_change_spatial
 ```
 
-The Township of Esquimalt has had a more variable population change pattern since 2001, with mostly a declining pattern from about 2006 to 2015. However, like the kid data in Greater Victoria, there has been an uptick in recent years. In fact, all the Greater Victoria municipalities&mdash;except North Saanich&mdash;had an increase in popuation over the last 2 years&mdash;Victoria a 1% increase, Esquimalt 3% and Sooke 11%! Wow, that is _a lot_. 
+</details>
 
-What I _really_ want to know is how the population of kids is changing in Esquimalt. While I was not able to find population-by-age data for Esquimalt, I did find it for School District 61 - Greater Victoria.
+<br/>
 
-#### Kid Population Change in SD61-Greater Victoria
+```{r mun-actual-plots, echo = FALSE,  fig.width = 10, fig.height = 7}
+#plot the Esquimalt plots
+esquimalt_plot + crd_change_spatial
+```
 
+The Township of Esquimalt population has been a bit more variable since 2001, with a mostly declining pattern from 2006 to 2015. However, there has been an uptick in recent years. In fact, _all_ the Greater Victoria municipalities&mdash;except North Saanich&mdash;had a measurable increase in popuation over the last 2 years&mdash;Victoria a 1% increase, Esquimalt 3% and Sooke 11%! Wow, that is _a lot_.
+
+What I _really_ want to know is how the population of _kids_ is changing in Esquimalt. I was not able to find population-by-age data for Esquimalt, but I did find it for the Greater Victoria School Districts.
+
+<br/>
+
+#### Kid Population Change in School District 61-Greater Victoria
+
+<details><summary>Click to see the R code for the SD61 plots</summary>
+
+```{r sd61}
+## Data: School District 61 Population Estimates & Projections from BCStats manual 
+## online tool: https://www.bcstats.gov.bc.ca/apps/PopulationProjections.aspx
+
+#get SD61 population estimates & projections
+sd61_kids <- read_csv(glue(path, "/Population_Projections.csv")) %>% 
+  select(Year, "<1", "1-4", "5-9", "10-14", "15-19") %>% 
+  gather(key = age_group, value = population_estimate, -Year) %>% 
+  filter(Year < 2038) %>% 
+  mutate(age_group = factor(age_group, ordered = TRUE,
+                            levels = c("<1", "1-4", "5-9", "10-14", "15-19")),
+         data_type = case_when(Year < 2018 ~ "estimated",
+                               TRUE ~ "projected"))
+
+#plot of kid population estimates in SD61 by age group
+sd61_kids_line_plot <- sd61_kids %>% 
+  filter(age_group != "<1") %>% 
+  ggplot(aes(Year, population_estimate, group = age_group, colour = data_type)) +
+  geom_line(size = 1) +
+  geom_segment(aes(xend = 2037 , yend = population_estimate), linetype = 2, colour = 'grey') + 
+  geom_point(size = 2) + 
+  geom_text(aes(x = 2037.1 , label = age_group), hjust = 0, colour = "#54278f") + 
+  coord_cartesian(clip = 'off') + 
+  labs(title = "Kid Population Estimates & Projections by Age Group for SD61",
+       # subtitle = "Kids include ages 1 to 19 years",
+       caption = "Data sourced from BCStats") +
+  theme(plot.margin = margin(5.5, 0, 5.5, 5.5)) +
+  scale_x_continuous(limits = c(1984, 2040), breaks = seq(1986, 2038, 5), expand = c(0,0)) +
+  scale_y_continuous(breaks = seq(6000, 13000, 1000), expand = c(0,0), labels = comma) +
+  scale_colour_manual(name = "", values = c("#54278f", "#9e9ac8")) +
+  scale_fill_manual(name = "", values = c("#54278f", "#9e9ac8")) +
+  theme_minimal() +
+  theme_plots +
+  theme(legend.position = "top",
+        legend.text = element_text(size = 12))
+
+#plot of total sd61 kid population estimates
+sd61_kids_total_plot <- sd61_kids %>% 
+  group_by(Year, data_type) %>% 
+  summarise(population_estimate = sum(population_estimate))  %>% 
+  ggplot(aes(x = Year, y = population_estimate, colour = data_type, group = 1)) + 
+  geom_point() +
+  geom_line(size = 1) +
+  labs(title = "Kid Population Estimates & Projections for SD61",
+       subtitle = "Kids include ages 0 to 19 years",
+       caption = "Data sourced from BCStats") +
+  scale_x_continuous(limits = c(1984, 2040), breaks = seq(1986, 2038, 5), expand = c(0,0)) +
+  scale_y_continuous(limits = c(35000, 43000), breaks = seq(35000, 43000, 500), expand = c(0,0), labels = comma) +
+  scale_colour_manual(name = "", values = c("#54278f", "#9e9ac8")) +
+  theme_minimal() +
+  theme_plots +
+  theme(legend.position = c(.2,.2),
+        legend.text = element_text(size = 12)) 
+```
+
+```{r sd61-plots, eval = FALSE, fig.width = 7, fig.height = 6, fig.align= "center"}
+#animate the sd61 age group plot
+sd61_kids_line_plot +
+  transition_reveal(age_group, Year)
+
+#plot the sd61 total line plot
+sd61_kids_total_plot
+```
+
+</details>
+
+<br/>
+
+```{r sd61-actual-anim, echo = FALSE, fig.width = 7, fig.height = 6, fig.align= "center"}
+#animate the sd61 age group plot
+sd61_kids_line_plot +
+  transition_reveal(age_group, Year)
+```
+
+The School District 61 data shows a similar pattern to what we have already observed&mdash; population declines for all kid age groups through the 2000s. We see the recent increases, _and_  the projected increases to come&mdash;for at least the next **15** years. I confess that while the animated plot is fun to make `r emo::ji("nerd")`, rolling the kid age groups together and keeping things still really tells the story:
+
+```{r sd61-actual-plots, echo = FALSE, fig.width = 7, fig.height = 6, fig.align= "center"}
+#plot the sd61 total plot
+sd61_kids_total_plot
+```
+
+
+<br/>
 
 #### Yep, The Kids Are Coming
 
-Our Esquimalt catchment elementary school is full and the kid population estimate lines are going up&mdash;and predicted to do so for many years to come `r emo::ji("chart_with_upwards_trend")`. In my opinion, a plan for the kids that are still to come should be high on the priority list `r emo::ji("scroll")` for the Township of Esquimalt. The elementary school space crunch has aleady had community impacts throughout the Capital Regional District, displacing dedicated computer labs, after-school care situations, pre-schools. The School District recently launched a [Catchment Boundary Review](https://www.sd61.bc.ca/news-events/community/catchmentboundaryreview/)&mdash;a great step in supporting planning. However, in a Township with only one catchment school and one boundary, I think it is _also_ time to start the conversations, considerations and calculations to bring a second catchment elementary school (back) on line for Esquimalt kids `r emo::ji("school")`.
+Our Esquimalt catchment elementary school is full and the kid population estimate lines are going up&mdash;and predicted to do so for at least the next 15 years `r emo::ji("chart_with_upwards_trend")`. In my opinion, a plan for the kids that are still to come should be on the to-do list `r emo::ji("scroll")` for the Township of Esquimalt. The elementary school space crunch has aleady had community impacts throughout the Capital Regional District, displacing dedicated computer labs, after-school care situations, pre-schools. The School District recently launched a [Catchment Boundary Review & Public Consultation](https://www.sd61.bc.ca/news-events/community/catchmentboundaryreview/)&mdash;a great step in supporting planning. However, with only one catchment school and one boundary, I think it is _also_ time to talk about bringing a second catchment elementary school (back) on line for Esquimalt kids `r emo::ji("school")`.
 
-- Details on the data sources (web sites, licences) are [here](https://github.com/stephhazlitt/some-assembly-required/blob/master/R/bc-sd61-popn/data/README.md)
-- Learn more about the CRD and Township of Esquimalt candidates  [here](https://www.timescolonist.com/elections)
+- Details on the data sources (e.g. website url, licences) are [here](https://github.com/stephhazlitt/some-assembly-required/blob/master/R/bc-sd61-popn/data/README.md)
+- The R source code can be reviewed [here](https://github.com/stephhazlitt/some-assembly-required/blob/master/R/bc-sd61-popn/sd61_kids.Rmd)
+- Learn more about the CRD & Township of Esquimalt candidates  [here](https://www.timescolonist.com/elections)
 - Don't forget to get out and [**VOTE on October 20th, 2018**](https://www.esquimalt.ca/municipal-hall/elections/2018-election/information-voters) 
 
 `r Sys.Date()`
