remove br lines

--- a/R/bc-sd61-popn/sd61_kids.Rmd
+++ b/R/bc-sd61-popn/sd61_kids.Rmd
@@ -50,13 +50,11 @@ Due to the recent, legal change to [revert class size & composition back to 2002
 
 I thought it would be interesting to support this discussion with some _data_. Also, I am always keen to work on my [R](https://www.r-project.org/) skills `r emo::ji("woman_technologist")`. So here it goes.
 
-<br/> 
-
 #### Population Change in Victoria Census Metropolitan Area (2001-2017)
 
 Let's start by pulling some population estimate data from Statistics Canada&mdash;I found data for each Census Metropolitan Area by age group. Perfect. I had to Google to learn about what the Victoria Census Metropolitan Area (CMA) actually includes (`r emo::ji("woman_facepalming")`), turns out it includes [all of the Capital Regional District minus the Gulf Islands](https://www12.statcan.gc.ca/census-recensement/2011/as-sa/fogs-spg/Facts-cma-eng.cfm?LANG=Eng&GK=CMA&GC=935). Let's have a look `r emo::ji("eyes")`:
 
-<details><summary>Click to see the R code for the Victoria CMA plots</summary>
+<details><summary><i>Click to see the R code for the Victoria CMA plots</i></summary>
 
 ```{r cma}
 ## Data: Victoria Census Metropolitan Census Area (British Columbia) Population
@@ -116,8 +114,6 @@ cma_plot + cma_kids_plot
 
 </details>
 
-<br/>
-
 ```{r cma-actual-plots, echo = FALSE, fig.width = 12, fig.height = 7}
 #plot the Victoria CMA plots
 cma_plot + cma_kids_plot
@@ -125,13 +121,11 @@ cma_plot + cma_kids_plot
 
 The Statistics Canada data confirms what we hear all the time, the population in the Victoria CMA has been steadily increasing since 2001. But _not_ due to more kids&mdash;the population of 0 to 19 year olds steadily declined from 2001 until 2013-2014. This explains the decline in enrolment&mdash;and School District decisions to close schools at that time. However, 2014 marks a clear change&mdash;kid numbers are increasing. But what about in the Township of Esquimalt?
 
-<br/>
-
 #### Population Change in the Township of Esquimalt (2001-2017)
 
 I found some population data for Municipalities from [BCStats](https://www2.gov.bc.ca/gov/content?id=36D1A7A4BEE248598281824C13CB65B6), but unfortunately not by age group `r emo::ji("disappointed")`.
 
-<details><summary>Click to see the R code for the Esquimalt plot & map</summary>
+<details><summary><i>Click to see the R code for the Esquimalt plot & map</i></summary>
 
 ```{r mun}
 ## Data: Esquimalt District Municipality population estimates from
@@ -218,8 +212,6 @@ esquimalt_plot + crd_change_spatial
 
 </details>
 
-<br/>
-
 ```{r mun-actual-plots, echo = FALSE,  fig.width = 10, fig.height = 7}
 #plot the Esquimalt plots
 esquimalt_plot + crd_change_spatial
@@ -229,11 +221,9 @@ The Township of Esquimalt population has been a bit more variable since 2001, wi
 
 What I _really_ want to know is how the population of _kids_ is changing in Esquimalt. I was not able to find population-by-age data for Esquimalt, but I did find it for the Greater Victoria School Districts.
 
-<br/>
-
 #### Kid Population Change in School District 61-Greater Victoria
 
-<details><summary>Click to see the R code for the SD61 plots</summary>
+<details><summary><i>Click to see the R code for the SD61 plots</i></summary>
 
 ```{r sd61}
 ## Data: School District 61 Population Estimates & Projections from BCStats manual 
@@ -301,8 +291,6 @@ sd61_kids_total_plot
 
 </details>
 
-<br/>
-
 ```{r sd61-actual-anim, echo = FALSE, fig.width = 7, fig.height = 6, fig.align= "center"}
 #animate the sd61 age group plot
 sd61_kids_line_plot +
@@ -316,8 +304,6 @@ The School District 61 data shows a similar pattern to what we have already obse
 sd61_kids_total_plot
 ```
 
-
-<br/>
 
 #### Yep, The Kids Are Coming
 
